# fpga-coprocessor

./: .gitignore  README.md
docs/: binaryzacja.md  przewodnik.md  techniczna.md
docs/dok_proc/: main.tex  titlepage.tex
docs/dok_proc/chapters/: five.tex  four.tex  one.tex
docs/dok_tech/: main.tex  titlepage.tex
docs/dok_tech/chapters/: one.tex  six.tex  three.tex  two.tex
docs/dok_uzytk/: main.tex  titlepage.tex
docs/dok_uzytk/chapters/: allinall.tex  one.tex  three.tex  two.tex  zero.tex
docs/przewodnik/: main.tex  titlepage.tex
docs/przewodnik/chapters/: disclaimer.tex  five.tex  four.tex  one.tex  six.tex  three.tex  two.tex
fpga/fpga-coprocessor/: ALU.vhd  basic_uart.vhd  const_mem.vhdl  fpga_coprocessor.htm  fpga_coprocessor.qpf  fpga_coprocessor.qsf  fpga_coprocessor.sof  fpga_coprocessor.vhd  instr_mem.vhdl  io_buffer.vhdl  loopback.vhd  mem.vhd  ram_mem.vhdl  stack.vhdl
fpga/pc/: send_bin  send_bin.c  test_uart.c
lang/: binarka  example  parser.cabal  stack.yaml
lang/examples/: GCD  Loop  Rotation  dotPr  fibb
lang/src/: Main.hs  ParseWhile.hs
lang/src/CodeGen/: ASM.hs  ASM2.hs  Binary.hs  Generator.hs  LabelRename.hs  Typechecker.hs  Vectors.hs
lang/src/Parser/: AST.hs  Lexer.hs  Parser.hs
vm/: vm.c
