name:                parser
version:             0.1.0.0
author:              dyczektomek@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:  CodeGen.ASM
                  , CodeGen.ASM2
                  , CodeGen.Generator
                  , CodeGen.LabelRename
                  , CodeGen.Typechecker
                  , Parser.Lexer
                  , Parser.AST
                  , Parser.Parser
                  , Main

  build-depends:    base
                  , containers
                  , data-default
                  , either
                  , mtl
                  , lens
                  , parsec
                  , pretty-show
                  , transformers
                  , transformers-compat

  hs-source-dirs:   src
  default-language: Haskell2010
